# mastodon-download-toots

./: .gitignore  LICENSE  README.md  pyproject.toml
mastodon_download/: __init__.py  __main__.py  args.py  mastodon.py  sqlite.py
